--- a/index_TA_by_sector.html
+++ b/index_TA_by_sector.html
@@ -1,6 +1,104 @@
-<html>
-<head>
+<!DOCTYPE html>
+<meta charset="utf-8">
 <style>
+body {
+  max-width:800px;
+  max-height:700px;
+  font-size:88%;
+    font-family: Arial;
+}
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+.bar {
+  fill: #ff335c;
+  fill-opacity: .9;
+}
+.bar:hover {
+  fill: #b80025 ;
+}
+.x.axis path {
+  display: none;
+}
+.d3-tip {
+  line-height: 1;
+  font-size: 20px;
+  font-family: DrukText;
+  padding: 12px;
+  background: #e6e6e6;
+  color: #000;
+  border-radius: 2px;
+}
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: #e6e6e6;
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
+.axislabel {
+  font-family: DrukText;
+  font-size:22px;
+}
+label {
+  position: relative;
+  top: -25px;
+  left: 575px;
+  font-family: DrukText;
+  font-size:16px;
+}
+h1 {
+    font-family:DrukText;
+    font-size: 40px;
+    display: block;
+}
+h2 {
+    font-family:PortraitText;
+    font-size: 18px;
+    color: #3c3c3c;
+    font-weight: normal;
+    line-height:12PX;
+}
+div.tooltip {
+  overflow:hidden;
+  max-width: 90%;
+  position:relative;
+  height: auto;
+  border-radius: 0px;
+  font: 14px PortraitText;
+  padding: 0px;
+  text-align: left;
+}
+#wrapper {
+width:95%;
+margin:0 auto;
+overflow:hidden;
+}
+#header
+{
+overflow:hidden;
+max-width: 90%;
+margin-bottom:5px;
+text-align:center;
+vertical-align: text-top;
+}
+#histogramdiv {
+padding:5px;
+}
 @font-face {
    font-family: 'DrukText';
    src: url('./fonts/Druk-Medium-Web.woff');
@@ -49,276 +147,116 @@
   font-weight: 500;
   font-style: italic;
 }
-body{
-    max-width:800px;
-    max-height:500px;
-    font-size:88%;
-}
-
-h1 {
-    font-family:DrukText;
-    font-size: 40px;
-    display: block;
-}
-h2 {
-    font-family:PortraitText;
-    font-size: 18px;
-    color: #3c3c3c;
-    font-weight: normal;
-    line-height:12PX;
-}
-div.tooltip {
-  overflow:hidden;
-  max-width: 90%;
-  position:relative;
-  top:-120px;
-  height: auto;
-  border-radius: 8px;
-  font: 14px PortraitText;
-  padding: 5px;
-  text-align: left;
-}
-#wrapper {
-width:95%;
-max-width: 770px;
-margin:0 auto;
-overflow:hidden;
-}
-#header
-{
-overflow:hidden;
-max-width: 90%;
-margin-bottom:5px;
-text-align:center;
-vertical-align: text-top;
-}
-#pieChart {
-position:relative;
-left:-50px;
-top:-80px;
-}
-
 </style>
-</head>
-
-
 <body>
 
+
   <div id="wrapper">
-  <div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, January-June 2017</h1></div>
-  <div id="pieChart"></div>
+  <div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, January-July 2017</h1></div>
+<label><input type="checkbox"> Sort values</label>
+<div id="histogramdiv"></div>
   </div>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/d3/4.7.2/d3.min.js"></script>
-<script src="d3pie.min.js"></script>
-<script>
-var pie = new d3pie("pieChart", {
-	//"header": {
-		//"title": {
-		//	"text": "NGO Representative Offices' Fields of Work, January-June 2017",
-		//	"fontSize": 40,
-		//	"font": "DrukText"
-		//},
-		//"subtitle": {
-		//	"text": "Number of Representative Offices Engaged in Certain Sectors as of June 30, 2017",
-		//	"color": "#3c3c3c",
-		//	"fontSize": 18,
-	//		"font": "PortraitText"
-	//	},
-	//	"titleSubtitlePadding": 9
-	//},
-	"footer": {
-		"color": "#999999",
-		"fontSize": 10,
-		"font": "PortraitText",
-		"location": "bottom-left"
-	},
-	"size": {
-		"canvasWidth": 770,
-		"canvasHeight": 500,
-		"pieOuterRadius": "75%"
-	},
-	"data": {
-		"sortOrder": "value-desc",
-		"content": [
-			{
-				"label": "Youth",
-				"value": 40,
-				"color": "#7a0018"
-			},
-			{
-				"label": "Education",
-				"value": 32,
-				"color": "#f2f2f2"
-			},
-			{
-				"label": "Poverty Alleviation",
-				"value": 23,
-				"color": "#ff859d"
-			},
-			{
-				"label": "Disaster Relief",
-				"value": 14,
-				"color": "#cc0029"
-			},
-      {
-        "label": "Health",
-        "value": 14,
-        "color": "#d8d8d8"
-      },
-      {
-        "label": "Environment",
-        "value": 12,
-        "color": "#ff1f4b"
-      },
-      {
-        "label": "Capacity-Building",
-        "value": 10,
-        "color": "#999999"
-      },
-      {
-				"label": "Rural Issues",
-				"value": 10,
-				"color": "#8f001d"
-			},
-      {
-				"label": "International Relations",
-				"value": 8,
-				"color": "#ff708d"
-			},
-      {
-				"label": "Infrastructure",
-				"value": 9,
-				"color": "#555555"
-			},
-      {
-        "label": "Disabilities",
-        "value": 6,
-        "color": "#ffc2ce"
-      },
-      {
-				"label": "Agriculture",
-				"value": 4,
-				"color": "#231f1f"
-			},
-      {
-				"label": "Arts and Culture",
-				"value": 4,
-				"color": "#a30021"
-			},
-			{
-				"label": "Women's Issues",
-				"value": 3,
-				"color": "#e6e6e6"
-			},
-			{
-				"label": "Aging",
-				"value": 2,
-				"color": "#ffd6de"
-			},
-			{
-				"label": "Animal Protection",
-				"value": 2,
-				"color": "#f50031"
-			},
-			{
-				"label": "Labor and Migrants",
-				"value": 2,
-				"color": "#cccccc"
-			},
-			{
-				"label": "Technology",
-				"value": 2,
-				"color": "#ff476c"
-			},
-			{
-				"label": "Trade",
-				"value": 2,
-				"color": "#666666"
-			},
-			{
-				"label": "Development",
-				"value": 1,
-				"color": "#7a0018"
-			},
-      {
-				"label": "Energy",
-				"value": 1,
-				"color": "#e0002d"
-			},
-      {
-        "label": "Ethnic Affairs",
-        "value": 1,
-        "color": "#ff99ad"
-      },
-      {
-        "label": "Media",
-        "value": 1,
-        "color": "#3c3c3c"
-      },
-      {
-        "label": "Sport",
-        "value": 1,
-        "color": "#b80025"
-      },
-      {
-        "label": "Tourism",
-        "value": 2,
-        "color": "#ffebef"
-      }
-		]
-	},
-	"labels": {
-		"outer": {
-			"pieDistance": 32
-		},
-		"inner": {
-			"format": "value",
-			"hideWhenLessThanPercentage": 2
-		},
-		"mainLabel": {
-			"color": "#3c3c3c",
-			"fontSize": 13,
-			"font": "PortraitText"
-		},
-		"percentage": {
-			"color": "#ffffff",
-			"decimalPlaces": 0
-		},
-		"value": {
-			"color": "#ffffff",
-			"fontSize": 12
-		},
-		"lines": {
-			"enabled": true
-		},
-		"truncation": {
-			"enabled": true
-		}
-	},
-	"effects": {
-		"pullOutSegmentOnClick": {
-			"effect": "linear",
-			"speed": 400,
-			"size": 8
-		}
-	},
-  "misc": {
-		"gradient": {
-			"enabled": true,
-			"percentage": 100
-		},
-		"canvasPadding":{
-      "top":30,"right":5,"bottom":0,"left":5}
-	}
 
+  <script src="./d3.v3.min.js"></script>
+  <script src="./d3.tip.v0.6.3.js"></script>
+<script>
+//changed bottom margin to allow for rotated x-axis labels
+var margin = {top: 30, right: 20, bottom: 160, left: 80},
+    width = 700 - margin.left - margin.right,
+    height = 400 - margin.top - margin.bottom;
+var formatPercent = d3.format(".0%");
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+var y = d3.scale.linear()
+    .range([height, 0]);
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left");
+var tip = d3.tip()
+  .attr('class', 'd3-tip')
+  .offset([-10, 0])
+  .html(function(d) {
+    return "Number of Activities: <span style='color:#ff0032'>" + d.activities + "</span>" + "<br>" ;
+  })
+var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+svg.call(tip);
+d3.tsv("TAsector.tsv", function(error, data) {
+  data.forEach(function(d) {
+    d.activities = +d.activities;
+  })  ;
+  x.domain(data.map(function(d) { return d.sector; }));
+  y.domain([0, d3.max(data, function(d) { return d.activities; })]);
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis)
+      //added to rotate x-axis labels
+      .selectAll("text")
+      .attr("y", 0)
+      .attr("x", -8)
+      .attr("dy", ".35em")
+      .attr("transform", "rotate(-90)")
+      .style("text-anchor", "end");
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+      .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", -50)
+      .attr("dy", ".71em")
+      .attr("class", "axislabel")
+      .style("text-anchor", "end")
+      .text("Number of Temporary Activities");
+  svg.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.sector); })
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.activities); })
+      .attr("height", function(d) { return height - y(d.activities); })
+      .on('mouseover', tip.show)
+      .on('mouseout', tip.hide);
+d3.select("input").on("change", change);
+  var sortTimeout = setTimeout(function() {
+   d3.select("input").property("checked", true).each(change);
+  }, 2000);
+  function change() {
+    clearTimeout(sortTimeout);
+    // Copy-on-write since tweens are evaluated after a delay.
+    var x0 = x.domain(data.sort(this.checked
+        ? function(a, b) { return b.activities - a.activities; }
+        : function(a, b) { return d3.ascending(a.sector, b.sector); })
+        .map(function(d) { return d.sector; }))
+        .copy();
+    svg.selectAll(".bar")
+        .sort(function(a, b) { return x0(a.sector) - x0(b.sector); });
+    var transition = svg.transition().duration(750),
+        delay = function(d, i) { return i * 50; };
+    transition.selectAll(".bar")
+        .delay(delay)
+        .attr("x", function(d) { return x0(d.sector); });
+    transition.select(".x.axis")
+        .call(xAxis)
+      .selectAll("g")
+        .delay(delay)
+        .selectAll("text")
+        .attr("y", 0)
+        .attr("x", -8)
+        .attr("dy", ".35em")
+        .attr("transform", "rotate(-90)")
+        .style("text-anchor", "end");
+  }
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Some fields of work have been abbreviated here: Civil Society Capacity-Building is shortened to Capacity-Building, International Relations/Exchange to International Relations, and Rural Issues/Development to Rural Issues.</li></ul></em>");
-
-
+.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before July 31, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Some fields of work have been abbreviated here: Civil Society Capacity-Building is shortened to Capacity-Building, International Relations/Exchange to International Relations, and Rural Issues/Development to Rural Issues.</li></ul></em>");
 </script>
-
-</body>
-</html>
